# esp-phone

./: CMakeLists.txt  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  app_main.c  idf_component.yml  mmap_generate_svg_assets.h
main/app/: app_animation.c  app_animation.h
main/custom_widgets/: lv_numpad.c  lv_numpad.h
main/svg_display/: lv_svg_disp.c  lv_svg_disp.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c
main/ui/fonts/: ui_font_DISPLAYTFB25.c  ui_font_OPPOSansBold10.c  ui_font_OPPOSansBold14.c  ui_font_OPPOSansBold18.c  ui_font_OPPOSansBold25.c  ui_font_OPPOSansBold30.c  ui_font_OPPOSansBold40.c  ui_font_OPPOSansBold50.c  ui_font_OPPOSansBold60.c  ui_font_OPPOSansBoldttf70.c  ui_font_OPPOSansRegular14.c  ui_font_OPPOSansRegular20.c  ui_font_OPPOSansRegular34.c  ui_font_OPPOSansRegular70.c
main/ui/images/: ui_img_1143594758.c  ui_img_1152878764.c  ui_img_126583460.c  ui_img_1328003813.c  ui_img_1515518950.c  ui_img_1755492943.c  ui_img_1817873855.c  ui_img_2054516389.c  ui_img_336861511.c  ui_img_352369578.c  ui_img_495558844.c  ui_img_667377057.c  ui_img_753335661.c  ui_img_988448286.c  ui_img_addcall.c  ui_img_addcontacts_png.c  ui_img_audio_off.c  ui_img_audio_on.c  ui_img_backspace_dark.c  ui_img_backspace_light.c  ui_img_backspace_png.c  ui_img_contact.c  ui_img_contacts_png.c  ui_img_dial_off.c  ui_img_facetime.c  ui_img_facetime_fill_png.c  ui_img_keypadEsc.c  ui_img_keypad_off.c  ui_img_keypad_on.c  ui_img_keypad_png.c  ui_img_mic_off.c  ui_img_mic_on.c
(+7 files in other folders)
